// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostsList matches snapshot with style being "Grid" 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-layout-grid layout-grid"
      >
        <div
          class="mdc-layout-grid__inner"
        >
          <div
            class="mdc-layout-grid__cell--span-4"
          >
            <div
              class="mdc-card single-post-card single-post-basic"
            >
              <div
                class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
                tabindex="0"
              >
                <div
                  class="single-post-card__primary"
                >
                  <h2
                    class="single-post-card__title title-large"
                  >
                    <div>
                      This is a test post title #1
                    </div>
                  </h2>
                  <h3
                    class="single-post-card__subtitle label-small"
                  >
                    <time
                      datetime="2020-02-25 08:20:38"
                    >
                      February 25, 2020
                    </time>
                  </h3>
                </div>
                <div
                  class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
                  style="background-image: url(http://example.com/test1.jpg);"
                />
                <div
                  class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
                >
                  <div>
                    This is a test post excerpt #1
                  </div>
                </div>
              </div>
              <div
                class="mdc-card__actions"
              >
                <div
                  class="mdc-card__action-buttons"
                >
                  <button
                    class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                  >
                    <span
                      class="mdc-button__ripple"
                    />
                    <i
                      aria-hidden="true"
                      class="material-icons mdc-button__icon"
                    >
                      comment
                    </i>
                    <span
                      class="mdc-button__label"
                    >
                      1
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mdc-layout-grid__cell--span-4"
          >
            <div
              class="mdc-card single-post-card single-post-basic"
            >
              <div
                class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
                tabindex="0"
              >
                <div
                  class="single-post-card__primary"
                >
                  <h2
                    class="single-post-card__title title-large"
                  >
                    <div>
                      This is a test post title #2
                    </div>
                  </h2>
                  <h3
                    class="single-post-card__subtitle label-small"
                  >
                    <time
                      datetime="2020-02-25 09:20:38"
                    >
                      February 25, 2020
                    </time>
                  </h3>
                </div>
                <div
                  class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
                  style="background-image: url(http://example.com/test2.jpg);"
                />
                <div
                  class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
                >
                  <div>
                    This is a test post excerpt #2
                  </div>
                </div>
              </div>
              <div
                class="mdc-card__actions"
              >
                <div
                  class="mdc-card__action-buttons"
                >
                  <button
                    class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                  >
                    <span
                      class="mdc-button__ripple"
                    />
                    <i
                      aria-hidden="true"
                      class="material-icons mdc-button__icon"
                    >
                      comment
                    </i>
                    <span
                      class="mdc-button__label"
                    >
                      4
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-layout-grid layout-grid"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell--span-4"
        >
          <div
            class="mdc-card single-post-card single-post-basic"
          >
            <div
              class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
              tabindex="0"
            >
              <div
                class="single-post-card__primary"
              >
                <h2
                  class="single-post-card__title title-large"
                >
                  <div>
                    This is a test post title #1
                  </div>
                </h2>
                <h3
                  class="single-post-card__subtitle label-small"
                >
                  <time
                    datetime="2020-02-25 08:20:38"
                  >
                    February 25, 2020
                  </time>
                </h3>
              </div>
              <div
                class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
                style="background-image: url(http://example.com/test1.jpg);"
              />
              <div
                class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
              >
                <div>
                  This is a test post excerpt #1
                </div>
              </div>
            </div>
            <div
              class="mdc-card__actions"
            >
              <div
                class="mdc-card__action-buttons"
              >
                <button
                  class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                >
                  <span
                    class="mdc-button__ripple"
                  />
                  <i
                    aria-hidden="true"
                    class="material-icons mdc-button__icon"
                  >
                    comment
                  </i>
                  <span
                    class="mdc-button__label"
                  >
                    1
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mdc-layout-grid__cell--span-4"
        >
          <div
            class="mdc-card single-post-card single-post-basic"
          >
            <div
              class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
              tabindex="0"
            >
              <div
                class="single-post-card__primary"
              >
                <h2
                  class="single-post-card__title title-large"
                >
                  <div>
                    This is a test post title #2
                  </div>
                </h2>
                <h3
                  class="single-post-card__subtitle label-small"
                >
                  <time
                    datetime="2020-02-25 09:20:38"
                  >
                    February 25, 2020
                  </time>
                </h3>
              </div>
              <div
                class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
                style="background-image: url(http://example.com/test2.jpg);"
              />
              <div
                class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
              >
                <div>
                  This is a test post excerpt #2
                </div>
              </div>
            </div>
            <div
              class="mdc-card__actions"
            >
              <div
                class="mdc-card__action-buttons"
              >
                <button
                  class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                >
                  <span
                    class="mdc-button__ripple"
                  />
                  <i
                    aria-hidden="true"
                    class="material-icons mdc-button__icon"
                  >
                    comment
                  </i>
                  <span
                    class="mdc-button__label"
                  >
                    4
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PostsList matches snapshot with style being "List" 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mdc-layout-grid layout-list"
      >
        <div
          class="mdc-layout-grid__inner"
        >
          <div
            class="mdc-layout-grid__cell--span-12"
          >
            <div
              class="mdc-card single-post-card single-post-card__list single-post-basic"
            >
              <div
                class="mdc-card__primary-action single-post-card__primary-action"
                tabindex="0"
              >
                <div
                  class="mdc-card__media mdc-card__media--square single-post-card__media"
                  style="background-image: url(http://example.com/test1.jpg);"
                />
                <div
                  class="single-post-card__primary"
                >
                  <h2
                    class="single-post-card__title title-large"
                  >
                    <div>
                      This is a test post title #1
                    </div>
                  </h2>
                  <h3
                    class="single-post-card__subtitle label-small"
                  >
                    <time
                      datetime="2020-02-25 08:20:38"
                    >
                      February 25, 2020
                    </time>
                  </h3>
                </div>
              </div>
              <div
                class="mdc-card__actions"
              >
                <div
                  class="mdc-card__action-buttons"
                >
                  <button
                    class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                  >
                    <span
                      class="mdc-button__ripple"
                    />
                    <i
                      aria-hidden="true"
                      class="material-icons mdc-button__icon"
                    >
                      comment
                    </i>
                    <span
                      class="mdc-button__label"
                    >
                      1
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
          <div
            class="mdc-layout-grid__cell--span-12"
          >
            <div
              class="mdc-card single-post-card single-post-card__list single-post-basic"
            >
              <div
                class="mdc-card__primary-action single-post-card__primary-action"
                tabindex="0"
              >
                <div
                  class="mdc-card__media mdc-card__media--square single-post-card__media"
                  style="background-image: url(http://example.com/test2.jpg);"
                />
                <div
                  class="single-post-card__primary"
                >
                  <h2
                    class="single-post-card__title title-large"
                  >
                    <div>
                      This is a test post title #2
                    </div>
                  </h2>
                  <h3
                    class="single-post-card__subtitle label-small"
                  >
                    <time
                      datetime="2020-02-25 09:20:38"
                    >
                      February 25, 2020
                    </time>
                  </h3>
                </div>
              </div>
              <div
                class="mdc-card__actions"
              >
                <div
                  class="mdc-card__action-buttons"
                >
                  <button
                    class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                  >
                    <span
                      class="mdc-button__ripple"
                    />
                    <i
                      aria-hidden="true"
                      class="material-icons mdc-button__icon"
                    >
                      comment
                    </i>
                    <span
                      class="mdc-button__label"
                    >
                      4
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mdc-layout-grid layout-list"
    >
      <div
        class="mdc-layout-grid__inner"
      >
        <div
          class="mdc-layout-grid__cell--span-12"
        >
          <div
            class="mdc-card single-post-card single-post-card__list single-post-basic"
          >
            <div
              class="mdc-card__primary-action single-post-card__primary-action"
              tabindex="0"
            >
              <div
                class="mdc-card__media mdc-card__media--square single-post-card__media"
                style="background-image: url(http://example.com/test1.jpg);"
              />
              <div
                class="single-post-card__primary"
              >
                <h2
                  class="single-post-card__title title-large"
                >
                  <div>
                    This is a test post title #1
                  </div>
                </h2>
                <h3
                  class="single-post-card__subtitle label-small"
                >
                  <time
                    datetime="2020-02-25 08:20:38"
                  >
                    February 25, 2020
                  </time>
                </h3>
              </div>
            </div>
            <div
              class="mdc-card__actions"
            >
              <div
                class="mdc-card__action-buttons"
              >
                <button
                  class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                >
                  <span
                    class="mdc-button__ripple"
                  />
                  <i
                    aria-hidden="true"
                    class="material-icons mdc-button__icon"
                  >
                    comment
                  </i>
                  <span
                    class="mdc-button__label"
                  >
                    1
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="mdc-layout-grid__cell--span-12"
        >
          <div
            class="mdc-card single-post-card single-post-card__list single-post-basic"
          >
            <div
              class="mdc-card__primary-action single-post-card__primary-action"
              tabindex="0"
            >
              <div
                class="mdc-card__media mdc-card__media--square single-post-card__media"
                style="background-image: url(http://example.com/test2.jpg);"
              />
              <div
                class="single-post-card__primary"
              >
                <h2
                  class="single-post-card__title title-large"
                >
                  <div>
                    This is a test post title #2
                  </div>
                </h2>
                <h3
                  class="single-post-card__subtitle label-small"
                >
                  <time
                    datetime="2020-02-25 09:20:38"
                  >
                    February 25, 2020
                  </time>
                </h3>
              </div>
            </div>
            <div
              class="mdc-card__actions"
            >
              <div
                class="mdc-card__action-buttons"
              >
                <button
                  class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                >
                  <span
                    class="mdc-button__ripple"
                  />
                  <i
                    aria-hidden="true"
                    class="material-icons mdc-button__icon"
                  >
                    comment
                  </i>
                  <span
                    class="mdc-button__label"
                  >
                    4
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`PostsList matches snapshot with style being "Masonry" 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="masonry-grid layout-masonry"
      >
        <div
          class="masonry-grid_column"
          style="width: 33.333333333333336%;"
        >
          <div>
            <div
              class="mdc-card single-post-card single-post-basic"
            >
              <div
                class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
                tabindex="0"
              >
                <div
                  class="single-post-card__primary"
                >
                  <h2
                    class="single-post-card__title title-large"
                  >
                    <div>
                      This is a test post title #1
                    </div>
                  </h2>
                  <h3
                    class="single-post-card__subtitle label-small"
                  >
                    <time
                      datetime="2020-02-25 08:20:38"
                    >
                      February 25, 2020
                    </time>
                  </h3>
                </div>
                <div
                  class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
                  style="background-image: url(http://example.com/test1.jpg);"
                />
                <div
                  class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
                >
                  <div>
                    This is a test post excerpt #1
                  </div>
                </div>
              </div>
              <div
                class="mdc-card__actions"
              >
                <div
                  class="mdc-card__action-buttons"
                >
                  <button
                    class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                  >
                    <span
                      class="mdc-button__ripple"
                    />
                    <i
                      aria-hidden="true"
                      class="material-icons mdc-button__icon"
                    >
                      comment
                    </i>
                    <span
                      class="mdc-button__label"
                    >
                      1
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="masonry-grid_column"
          style="width: 33.333333333333336%;"
        >
          <div>
            <div
              class="mdc-card single-post-card single-post-basic"
            >
              <div
                class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
                tabindex="0"
              >
                <div
                  class="single-post-card__primary"
                >
                  <h2
                    class="single-post-card__title title-large"
                  >
                    <div>
                      This is a test post title #2
                    </div>
                  </h2>
                  <h3
                    class="single-post-card__subtitle label-small"
                  >
                    <time
                      datetime="2020-02-25 09:20:38"
                    >
                      February 25, 2020
                    </time>
                  </h3>
                </div>
                <div
                  class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
                  style="background-image: url(http://example.com/test2.jpg);"
                />
                <div
                  class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
                >
                  <div>
                    This is a test post excerpt #2
                  </div>
                </div>
              </div>
              <div
                class="mdc-card__actions"
              >
                <div
                  class="mdc-card__action-buttons"
                >
                  <button
                    class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                  >
                    <span
                      class="mdc-button__ripple"
                    />
                    <i
                      aria-hidden="true"
                      class="material-icons mdc-button__icon"
                    >
                      comment
                    </i>
                    <span
                      class="mdc-button__label"
                    >
                      4
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="masonry-grid layout-masonry"
    >
      <div
        class="masonry-grid_column"
        style="width: 33.333333333333336%;"
      >
        <div>
          <div
            class="mdc-card single-post-card single-post-basic"
          >
            <div
              class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
              tabindex="0"
            >
              <div
                class="single-post-card__primary"
              >
                <h2
                  class="single-post-card__title title-large"
                >
                  <div>
                    This is a test post title #1
                  </div>
                </h2>
                <h3
                  class="single-post-card__subtitle label-small"
                >
                  <time
                    datetime="2020-02-25 08:20:38"
                  >
                    February 25, 2020
                  </time>
                </h3>
              </div>
              <div
                class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
                style="background-image: url(http://example.com/test1.jpg);"
              />
              <div
                class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
              >
                <div>
                  This is a test post excerpt #1
                </div>
              </div>
            </div>
            <div
              class="mdc-card__actions"
            >
              <div
                class="mdc-card__action-buttons"
              >
                <button
                  class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                >
                  <span
                    class="mdc-button__ripple"
                  />
                  <i
                    aria-hidden="true"
                    class="material-icons mdc-button__icon"
                  >
                    comment
                  </i>
                  <span
                    class="mdc-button__label"
                  >
                    1
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="masonry-grid_column"
        style="width: 33.333333333333336%;"
      >
        <div>
          <div
            class="mdc-card single-post-card single-post-basic"
          >
            <div
              class="mdc-card__primary-action single-post-card__primary-action mdc-ripple-upgraded"
              tabindex="0"
            >
              <div
                class="single-post-card__primary"
              >
                <h2
                  class="single-post-card__title title-large"
                >
                  <div>
                    This is a test post title #2
                  </div>
                </h2>
                <h3
                  class="single-post-card__subtitle label-small"
                >
                  <time
                    datetime="2020-02-25 09:20:38"
                  >
                    February 25, 2020
                  </time>
                </h3>
              </div>
              <div
                class="mdc-card__media mdc-card__media--16-9 single-post-card__media single-post-card-with-text-above-media"
                style="background-image: url(http://example.com/test2.jpg);"
              />
              <div
                class="single-post-card__secondary single-post-card__secondary-text-above-media body-medium"
              >
                <div>
                  This is a test post excerpt #2
                </div>
              </div>
            </div>
            <div
              class="mdc-card__actions"
            >
              <div
                class="mdc-card__action-buttons"
              >
                <button
                  class="mdc-button mdc-card__action mdc-card__action--button mdc-button__comment-count"
                >
                  <span
                    class="mdc-button__ripple"
                  />
                  <i
                    aria-hidden="true"
                    class="material-icons mdc-button__icon"
                  >
                    comment
                  </i>
                  <span
                    class="mdc-button__label"
                  >
                    4
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
